@@ -1,3 +1,7 @@
+2004-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/fd.cxx: Fix the assert just added. 0 is a valid fd.
+
 2004-03-25  Sebastien Couret  <sebastien.couret@elios-informatique.fr>
 
 	* src/fd.cxx: Added CYG_ASSERT bound checking for file descriptor
